# frogworks-client

./: Cargo.toml
cli/: CLI to-do list.txt  Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: activity.rs  api_error.rs  application.rs  application_key.rs  application_session.rs  application_version.rs  cloud_data.rs  deposit.rs  friend.rs  friend_request.rs  iap.rs  iap_record.rs  invite.rs  lib.rs  photo.rs  purchase.rs  sale.rs  session.rs  transaction.rs  user.rs
daemon/: Cargo.toml  build.rs  frogworks-daemon.rc
daemon/src/: main.rs
installation_manager/: Cargo.toml
installation_manager/src/: main.rs
uninstaller/: Cargo.toml
