[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.7", features = ["blocking", "multipart", "json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
url = "2.5.2"
gethostname = "0.5.0"
mac_address = "1.1.7"
base64 = "0.22.1"
bytes = "1.7.2"